src/interpreter/snapshots/tree_surgeon__interpreter__runtime__interpreter@basic-warn-file.snap
---
source: src/interpreter/runtime.rs
expression: ctx.file_cache.to_string()
---

    #include <test.h>
    
