src/interpreter/snapshots/tree_surgeon__interpreter__runtime__interpreter@basic-warn-output.snap
---
source: src/interpreter/runtime.rs
expression: "String::from_utf8(output).unwrap()"
---
{"message": "warning","severity": "warning","causes": [],"filename": "","labels": [{"span": {"offset": 5,"length": 22}}],"related": []}
