src/interpreter/snapshots/tree_surgeon__interpreter__runtime__interpreter@c-basic-warn-output.snap
---
source: src/interpreter/runtime.rs
expression: output_text
---
{"message": "warning","severity": "warning","causes": [],"filename": "","labels": [{"span": {"offset": 5,"length": 22}}],"related": []}
