src/interpreter/snapshots/tree_surgeon__interpreter__runtime__interpreter@c-empty-file_tree.snap
---
source: src/interpreter/runtime.rs
expression: ctx.file_tree.root_node().to_sexp()
---
(translation_unit)
