src/interpreter/snapshots/tree_surgeon__interpreter__runtime__interpreter@c-include-match-2-file.snap
---
source: src/interpreter/runtime.rs
expression: ctx.file_cache.to_string()
---

    #include <first.h>
    #include <other.h>
    #include <second.h>

    void foo(void) { call(TEST); }
    
