src/interpreter/snapshots/tree_surgeon__interpreter__runtime__interpreter@c-include-match-file.snap
---
source: src/interpreter/runtime.rs
expression: ctx.file_cache.to_string()
---

    #include <other.h>
    #define TEST x
    
