src/interpreter/snapshots/tree_surgeon__interpreter__runtime__interpreter@c-replace-foo-bar-file.snap
---
source: src/interpreter/runtime.rs
expression: ctx.file_cache.to_string()
---

    #define do_test do { foo x; } while(0)

    void test(void) {
        bar x;
    }
    
