src/interpreter/snapshots/tree_surgeon__interpreter__runtime__interpreter@include-match-file_tree.snap
---
source: src/interpreter/runtime.rs
expression: ctx.file_tree.root_node().to_sexp()
---
(translation_unit (preproc_include path: (system_lib_string)) (preproc_def name: (identifier) value: (preproc_arg)))
