src/interpreter/snapshots/tree_surgeon__interpreter__runtime__interpreter@replace-foo-bar-file.snap
---
source: src/interpreter/runtime.rs
expression: ctx.file_cache.to_string()
---

    void test(void) {
        bar x;
    }
    
